# pm

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml
.claude/: ralph-loop.local.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai_client.py  auth.py  db.py  kanban_patch.py  main.py  models.py
backend/app/static/: index.html
backend/data/: kanban.db
backend/tests/: test_auth.py  test_db_repository.py  test_integration.py  test_main_api.py  test_models.py  test_multi_board.py  test_user_management.py
docs/: DATABASE_SCHEMA.md  PLAN.md  code_review.md  review.md
frontend/: AGENTS.md
frontend/src/components/: AiSidebarChat.tsx  AuthGate.tsx  BoardSelector.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: aiChatApi.ts  apiUtils.ts  auth.test.ts  auth.ts  boardsApi.test.ts  boardsApi.ts  kanban.ts  kanbanApi.test.ts  kanbanApi.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-mac.sh  start-windows.bat  stop-mac.sh  stop-windows.bat
